Tp 6 à 10 de https://amio-fit2.2isa.eu/mod/book/view.php?id=11946&chapterid=232 réalisés. Design du nouveau tp 11 fait, il reste qu'à utiliser : OpenFileDialog : boite de dialogue sélecteur de fichiers ShowDialog (Méthode) : affiche un sélecteur de fichiers FileName (Propriété) : le fichier sélectionné Filter (Propriété) : types de fichiers (ici des images) InitialDirectory : répertoire initial

--- a/TestCDA313102020/ChercheLeCheminDeMonImage/ChercheLeCheminDeMonImage.csproj
+++ b/TestCDA313102020/ChercheLeCheminDeMonImage/ChercheLeCheminDeMonImage.csproj
@@ -4,29 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6986AA64-C6A0-4E85-AC13-0810CFBC07B5}</ProjectGuid>
+    <ProjectGuid>{BC20622C-3B13-4AEB-A977-04B9D207EB14}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>QuelEstMonAge</RootNamespace>
-    <AssemblyName>QuelEstMonAge</AssemblyName>
+    <RootNamespace>ChercheLeCheminDeMonImage</RootNamespace>
+    <AssemblyName>ChercheLeCheminDeMonImage</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
-    <PublishUrl>publish\</PublishUrl>
-    <Install>true</Install>
-    <InstallFrom>Disk</InstallFrom>
-    <UpdateEnabled>false</UpdateEnabled>
-    <UpdateMode>Foreground</UpdateMode>
-    <UpdateInterval>7</UpdateInterval>
-    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
-    <UpdatePeriodically>false</UpdatePeriodically>
-    <UpdateRequired>false</UpdateRequired>
-    <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
-    <UseApplicationTrust>false</UseApplicationTrust>
-    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -61,17 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FormQuelEstMonAge.cs">
+    <Compile Include="ChercheMonFichierImageForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormQuelEstMonAge.Designer.cs">
-      <DependentUpon>FormQuelEstMonAge.cs</DependentUpon>
+    <Compile Include="ChercheMonFichierImageForm.Designer.cs">
+      <DependentUpon>ChercheMonFichierImageForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Settings.cs" />
-    <EmbeddedResource Include="FormQuelEstMonAge.resx">
-      <DependentUpon>FormQuelEstMonAge.cs</DependentUpon>
+    <EmbeddedResource Include="ChercheMonFichierImageForm.resx">
+      <DependentUpon>ChercheMonFichierImageForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -81,8 +65,8 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -94,16 +78,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
-      <Visible>False</Visible>
-      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 et x64%29</ProductName>
-      <Install>true</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\live_search_15403.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
