--- a/TestCDA313102020/ChercheLeCheminDeMonImage/ChercheLeCheminDeMonImage.csproj
+++ b/TestCDA313102020/ChercheLeCheminDeMonImage/ChercheLeCheminDeMonImage.csproj
@@ -83,5 +83,20 @@
   <ItemGroup>
     <None Include="Resources\live_search_15403.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\add.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\remove.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\reset.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\button_cancel.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\delete.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
